Modify sayHello to greet

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-        <script src="Scripts/hello.js"></script>
+        <script src="Scripts/greet.js"></script>
  
         <script>
             $(function() {
-                sayHello();
+                greet();
             });
         </script>
  
