--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
  
         <script>
             $(function() {
-                sayHello();
+				var guest = location.search.substring(1);
+				sayHello(guest);				
             });
         </script>
  
