Greet to guest with visiting history

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.0.3/js.cookie.min.js"></script>
         <script src="Scripts/hello.js"></script>
         <script src="Scripts/greet.js"></script>
  
@@ -15,6 +16,7 @@
     <body style="font-family:Arial; font-size:14px;">
  
         <p>Hello.</p>
+        <p><a href="javascript:reset();">reset cookies</a>
  
     </body>
 </html> 
